--- a/apropos.html
+++ b/apropos.html
@@ -14,7 +14,7 @@
         <a href="#" class="logo">Site 2.0</a>
         <nav class="navbar">
             <a href="index.html">Accueil</a>
-            <a href="apropos.html" class="active">A propos</a>
+            <a href="apropos.html" class="active"> À Propos</a>
             <a href="services.html">Services</a>
             <a href="contact.html">Contact</a>
         </nav>
