--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
         <a href="#" class="logo">Site 2.0</a>
         <nav class="navbar">
             <a href="#" class="active">Accueil</a>
-            <a href="apropos.html">A propos</a>
+            <a href="apropos.html">À Propos</a>
             <a href="services.html" class="active">Services</a>
             <a href="contact.html">Contact</a>
         </nav>
