--- a/contact.html
+++ b/contact.html
@@ -21,23 +21,27 @@
         </nav>
     </header>
     <div class="container">
-        <h1>Contactez-nous</h1>
-        <form>
-            <div class="form-group">
-            <label for="fname" class="form-label mt-4">Nom & prénom</label>
-            <input type="text" class="form-control"id="fname" name="firstname" placeholder="Votre nom et prénom">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1" class="form-label mt-4">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-              </div>
-            <div class="form-group">
-                <label for="exampleTextarea" class="form-label mt-4">Example textarea</label>
-                <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-              </div>
-            <button class="btn btn-dark w-100">Envoyer</button>
-        </form>
+        <h1 class="text-center">Contactez-nous</h1>
+            <form>
+                <div class="form-group">
+                    <label for="fname" class="form-label mt-4">Votre nom & prénom</label>
+                    <input type="text" class="form-control" id="fname" name="firstname" placeholder="Dupont Jean">
+                </div>
+                <div class="">
+                    <label for="exampleInputEmail1" class="form-label mt-4">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        placeholder="jeandupont@example.com">
+                    <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                </div>
+                <div class="">
+                    <label for="exampleTextarea" class="form-label mt-4">Message</label>
+                    <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                </div>
+                <div>
+                    <br>
+                </div>
+                <button class="btn btn-dark d-flex justify-content-center align-items-center ">Envoyer</button>
+            </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
