ajout photo + modif de mise en page

--- a/apropos.html
+++ b/apropos.html
@@ -2,34 +2,69 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>Site Internet</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <title>Site Internet</title>
 </head>
 
 <body class="body">
-    <header class="haut">
-        <a href="#" class="logo">Site 2.0</a>
-        <nav class="navbar">
-            <a href="index.html">Accueil</a>
-            <a href="apropos.html" class="active"> À Propos</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+  <header class="haut">
+    <a href="#" class="logo">Site 2.0</a>
+    <nav class="navbar">
+      <a href="index.html">Accueil</a>
+      <a href="apropos.html" class="active"> À Propos</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-     <div class="container">
-        <div class="apropos">
-          <div class="un">
-            <p>
-                
-            </p>
+
+
+  <div class="container">
+    <h1 class="text-center">À Propos</h1>
+    <br>
+
+    <div class="apropos">
+      <h2 class="text-center">Juste pour vous montrer les photos du ciel, c'est trop beau 🥹 </h2>
+      <br>
+      <p id="un"><em>Regardez le paysage de cette photo</em> 🥹, <em>n'est-ce pas magnifique ? </em></p>
+      <div class="card">
+        <img src="/img/paysage.jpeg" class="card-img-top" alt="paysage..">
+        <div class="card-body">
+          <p class="card-text"> <em>Photo prise Au Sénégal, à Keur Massar.</em></p>
+        </div>
+      </div>
+      <br>
+      <p id="un"><em>Regardez ce beau dégradé </em> 🥹, <em>n'est-ce pas magnifique ? </em></p>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="/img/IMG-8404.jpg" class="card-img-top" alt="beau ciel">
+          <div class="card-body">
+            <p class="card-text"> <em>Photo prise en France, à Trappes 78.</em></p>
           </div>
         </div>
-     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+      </div>
+      <br>
+      <p id="un"><em>Regardez la formation des nuages </em> 🥹, <em>n'est-ce pas magnifique ? </em></p>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="/img/IMG-8740.jpg" class="card-img-top" alt="paysage..">
+          <div class="card-body">
+            <p class="card-text"> <em>Photo prise en France, à Paris 12.</em></p>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
